--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,3 +1,52 @@
 .Weather{
     border: 1px solid #dadde1;
+    font-family: Arial, sans-serif;
+    color: rgb(135,135,135);
+    padding: 16px;
+    margin: 30px auto;
+   
+    border-radius: 4px;
 }
+
+
+.Weather h1{
+    font-size: 24px;
+    font-weight: 100;
+    line-height: 29px;
+    margin: 20px 0 0 0;
+}
+
+.Weather ul{
+    margin: 0;
+    padding: 0;
+}
+
+.Weather li{
+    font-size: 16px;
+    font-weight: 100;
+    line-height: 19px;
+    list-style: none;
+}
+
+.Weather img{
+    margin-right: 10px;
+    width: 100px;
+}
+
+
+.Weather .temperature{
+    color: rgb(33, 33, 33);
+    font-weight: bold;
+    font-size: 64px;
+    font-weight: 400;
+}
+
+.Weather .unit{
+    color: rgb(33, 33, 33);
+    font-size: 16px;
+    font-weight: 400;
+    position: relative;
+    top: -32px;
+    margin-left: 5px;
+}
+
